--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
             <artifactId>javafx-maven-plugin</artifactId>
             <version>0.0.6</version>
             <configuration>
-                <mainClass>org.billingfx.App</mainClass>
+                <mainClass>org.billingfx.controllers.App</mainClass>
             </configuration>
         </plugin>
     </plugins>
